--- a/index.html
+++ b/index.html
@@ -11,29 +11,30 @@
   <script defer src="js/component.js"></script>
 
 </head>
+
 <body>
 
-  Learn to code by watching others
+  <div>
+    <div>
+    <h1>Learn to code by watching others</h1>
+      <p>
+      See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+      but understanding how developers think is invaluable.
+      </p>
+    </div>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+  <button>Try it free 7 days then $20/mo. thereafter</button>
+    <div>
+      <form>
+        <input type="text" name="name" placeholder="First Name"><br>
+        <input type="text" name="Last name" placeholder="Last Name "><br>
+        <input type="e-mail" name="email" placeholder="Email Address"><br>
+        <input type="password" name="Password" placeholder="Password"><br>
+        <input type="submit" name="enviar" value="Claim your free trial"><br>
+      </form>
+      <footer>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></footer>
+    </div>
+</div>
 
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
