--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <title>Intro component with sign up form</title>
   <link rel="stylesheet" href="css/style.css">
   <script defer src="js/component.js"></script>
@@ -14,7 +16,7 @@
 
 <body>
 
-  <div>
+  <div class="container">
     <div>
     <h1>Learn to code by watching others</h1>
       <p>
@@ -24,6 +26,7 @@
     </div>
 
   <button>Try it free 7 days then $20/mo. thereafter</button>
+  
     <div>
       <form>
         <input type="text" name="name" placeholder="First Name"><br>
