--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <title>Intro component with sign up form</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <script defer src="js/component.js"></script>
 
@@ -16,18 +17,19 @@
 
 <body>
 
-  <div class="container">
-    <div>
-    <h1>Learn to code by watching others</h1>
-      <p>
-      See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-      but understanding how developers think is invaluable.
-      </p>
+  <div class="row">
+    <div class="col-sm-7">
+        <h1>Learn to code by watching others</h1>
+          <p>
+          See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+          but understanding how developers think is invaluable.
+          </p>
     </div>
 
-  <button>Try it free 7 days then $20/mo. thereafter</button>
+    <div class="col-sm-5">
+
+      <button>Try it free 7 days then $20/mo. thereafter</button>
   
-    <div>
       <form>
         <input type="text" name="name" placeholder="First Name"><br>
         <input type="text" name="Last name" placeholder="Last Name "><br>
@@ -38,6 +40,9 @@
       <footer>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></footer>
     </div>
 </div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
 </html>
