--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,8 +17,9 @@
 
 <body>
 
+<div class="container">
   <div class="row">
-    <div class="col-sm-7">
+    <div class="col-sm-12 col-md-12 col-lg-5" id="text-right">
         <h1>Learn to code by watching others</h1>
           <p>
           See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
@@ -26,21 +27,21 @@
           </p>
     </div>
 
-    <div class="col-sm-5">
+    <div class="col-sm-12 col-md-12 col-lg-7">
 
-      <button>Try it free 7 days then $20/mo. thereafter</button>
-  
+      <button class="btn">Try it free 7 days then $20/mo. thereafter</button><br>
+    <div class="formulario">
       <form>
-        <input type="text" name="name" placeholder="First Name"><br>
-        <input type="text" name="Last name" placeholder="Last Name "><br>
-        <input type="e-mail" name="email" placeholder="Email Address"><br>
-        <input type="password" name="Password" placeholder="Password"><br>
-        <input type="submit" name="enviar" value="Claim your free trial"><br>
+        <input class="form-control" type="text" name="name" placeholder="First Name"><br>
+        <input class="form-control" type="text" name="Last name" placeholder="Last Name "><br>
+        <input class="form-control" type="e-mail" name="email" placeholder="Email Address"><br>
+        <input class="form-control" type="password" name="Password" placeholder="Password"><br>
+        <input class="form-control submit btn-color" type="submit" name="enviar" value="Claim your free trial"><br>
       </form>
       <footer>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></footer>
     </div>
+    </div>
 </div>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
