--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12 col-md-12 col-lg-5" id="text-right">
+    <div class="part1 col-sm-12 col-md-12 col-lg-5" id="text-right">
         <h1>Learn to code by watching others</h1>
           <p>
           See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
@@ -27,9 +27,9 @@
           </p>
     </div>
 
-    <div class="col-sm-12 col-md-12 col-lg-7">
+    <div class=" part2 col-sm-12 col-md-12 col-lg-7">
 
-      <button class="btn">Try it free 7 days then $20/mo. thereafter</button><br>
+      <button class="botao">Try it free 7 days then $20/mo. thereafter</button><br>
     <div class="formulario">
       <form>
         <input class="form-control" type="text" name="name" placeholder="First Name"><br>
