backgraud tranparente e cor font

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class=" part2 col-sm-12 col-md-12 col-lg-7">
 
-      <button class="botao">Try it free 7 days then $20/mo. thereafter</button><br>
+      <button class="botao"><b>Try it free 7 days</b> then $20/mo. thereafter</button><br>
     <div class="formulario">
       <form>
         <input class="form-control" type="text" name="name" placeholder="First Name"><br>
