--- a/index.html
+++ b/index.html
@@ -29,20 +29,44 @@
 
     <div class=" part2 col-sm-12 col-md-12 col-lg-7">
 
-      <button class="botao"><b>Try it free 7 days</b> then $20/mo. thereafter</button><br>
+      <button class="botao"><span>Try it free 7 days</span> then $20/mo. thereafter</button><br>
     <div class="formulario">
       <form>
-        <input class="form-control" type="text" name="name" placeholder="First Name"><br>
-        <input class="form-control" type="text" name="Last name" placeholder="Last Name "><br>
-        <input class="form-control" type="e-mail" name="email" placeholder="Email Address"><br>
-        <input class="form-control" type="password" name="Password" placeholder="Password"><br>
+        <div class="form-check">
+          <input class="form-control" type="text" name="name" placeholder="First Name">
+          <i class="fa-sharp fa-solid fa-circle-check"></i>
+          <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+          <small>First Name cannot be empyt</small>
+        </div>
+        <div class="form-check">
+          <input class="form-control" type="text" name="Last name" placeholder="Last Name ">
+          <i class="fa-sharp fa-solid fa-circle-check"></i>
+          <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+          <small>Last Name cannot be empyt</small>
+        </div>
+        <div class="form-check">
+          <input class="form-control" type="e-mail" name="email" placeholder="Email Address">
+          <i class="fa-sharp fa-solid fa-circle-check"></i>
+          <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+          <small>Looks like this is not an email</small>
+        </div>
+        <div class="form-check">
+          <input class="form-control" type="password" name="Password" placeholder="Password">
+          <i class="fa-sharp fa-solid fa-circle-check"></i>
+          <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+          <small>Password cannot be empyt</small>
+        </div>
+        
         <input class="form-control submit btn-color" type="submit" name="enviar" value="Claim your free trial"><br>
+
       </form>
       <footer>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></footer>
     </div>
     </div>
 </div>
 
+
+<script src="https://kit.fontawesome.com/14aa5d8c25.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
