--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <script defer src="js/component.js"></script>
+  <script src="https://kit.fontawesome.com/14aa5d8c25.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -31,26 +32,26 @@
 
       <button class="botao"><span>Try it free 7 days</span> then $20/mo. thereafter</button><br>
     <div class="formulario">
-      <form>
-        <div class="form-check">
+      <form class="form">
+        <div class="input-container">
           <input class="form-control" type="text" name="name" placeholder="First Name">
           <i class="fa-sharp fa-solid fa-circle-check"></i>
           <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
           <small>First Name cannot be empyt</small>
         </div>
-        <div class="form-check">
+        <div class="input-container">
           <input class="form-control" type="text" name="Last name" placeholder="Last Name ">
           <i class="fa-sharp fa-solid fa-circle-check"></i>
           <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
           <small>Last Name cannot be empyt</small>
         </div>
-        <div class="form-check">
+        <div class="input-container">
           <input class="form-control" type="e-mail" name="email" placeholder="Email Address">
           <i class="fa-sharp fa-solid fa-circle-check"></i>
           <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
           <small>Looks like this is not an email</small>
         </div>
-        <div class="form-check">
+        <div class="input-container">
           <input class="form-control" type="password" name="Password" placeholder="Password">
           <i class="fa-sharp fa-solid fa-circle-check"></i>
           <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
@@ -65,8 +66,6 @@
     </div>
 </div>
 
-
-<script src="https://kit.fontawesome.com/14aa5d8c25.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
