--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,8 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <title>Intro component with sign up form</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/component.js"></script>
+  <link rel="stylesheet" href="css/style.css"> 
   <script src="https://kit.fontawesome.com/14aa5d8c25.js" crossorigin="anonymous"></script>
 
 </head>
@@ -32,33 +31,33 @@
 
       <button class="botao"><span>Try it free 7 days</span> then $20/mo. thereafter</button><br>
     <div class="formulario">
-      <form class="form">
-        <div class="input-container">
-          <input class="form-control" type="text" name="name" placeholder="First Name">
+      <form id="form">
+        <div class="form-control" >
+          <input id="username" type="text" placeholder="First Name">
           <i class="fa-sharp fa-solid fa-circle-check"></i>
           <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
-          <small>First Name cannot be empyt</small>
+          <small>mensagem erro</small>
         </div>
-        <div class="input-container">
-          <input class="form-control" type="text" name="Last name" placeholder="Last Name ">
+        <div class="form-control" >
+          <input id="lastname" type="text" placeholder="Last Name ">
           <i class="fa-sharp fa-solid fa-circle-check"></i>
           <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
-          <small>Last Name cannot be empyt</small>
+          <small>mensagem erro</small>
         </div>
-        <div class="input-container">
-          <input class="form-control" type="e-mail" name="email" placeholder="Email Address">
+        <div class="form-control" >
+          <input id="email" type="e-mail" placeholder="Email Address">
           <i class="fa-sharp fa-solid fa-circle-check"></i>
           <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
-          <small>Looks like this is not an email</small>
+          <small>mensagem erro</small>
         </div>
-        <div class="input-container">
-          <input class="form-control" type="password" name="Password" placeholder="Password">
+        <div class="form-control" >
+          <input id="password" type="password" placeholder="Password">
           <i class="fa-sharp fa-solid fa-circle-check"></i>
           <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
-          <small>Password cannot be empyt</small>
+          <small>mensagem erro</small>
         </div>
         
-        <input class="form-control submit btn-color" type="submit" name="enviar" value="Claim your free trial"><br>
+        <button class="submit btn-color" type="submit" name="enviar">Claim your free trial</button>
 
       </form>
       <footer>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></footer>
@@ -69,4 +68,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
+<script src="js/component.js"></script>
 </html>
